--- a/.github/workflows/stats_plot_top_students.yml
+++ b/.github/workflows/stats_plot_top_students.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          pip install requests
+          pip install matplotlib
       - name: Run script
         run: python ./actions_resources/stats_plot.py ${{ secrets.GH_TOKEN }}
       - name: Commit and Push Graph
